Publish our fork into NPM package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-animatable",
-  "version": "0.6.1",
+  "name": "@pod-point/react-native-animatable",
+  "version": "0.6.2",
   "description": "Easy to use declarative transitions and a standard set of animations for React Native",
   "main": "index.js",
   "scripts": {
@@ -23,16 +23,16 @@
     "animation"
   ],
   "author": {
-    "name": "Joel Arvidsson",
-    "email": "joel@oblador.se"
+    "name": "POD Point",
+    "email": "software@pod-point.com"
   },
-  "homepage": "https://github.com/oblador/react-native-animatable",
+  "homepage": "https://github.com/Pod-Point-Open-Source/react-native-animatable",
   "bugs": {
-    "url": "https://github.com/oblador/react-native-animatable/issues"
+    "url": "https://github.com/Pod-Point-Open-Source/react-native-animatable/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/oblador/react-native-animatable.git"
+    "url": "git://github.com/Pod-Point-Open-Source/react-native-animatable.git"
   },
   "license": "MIT",
   "devDependencies": {
